2013-07-04  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #47810: Audio Captcha not working under IE 8
	* Update version to 2.0.3

2013-06-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #49272: Add support for mp3 audio captcha rendering
	* Fixed bug #49274: Voice file for digit 3 in Portuguese is broken	

2013-05-24  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #48516: Replace some default fonts for better readability
	* Fixed issue #48519: Correct/remove some words from French words list
	* Updated manual
	* Fixed textual errors in TS static template
	* Require 6.0.5-6.1.99
	* Update version to 2.0.1

2013-05-23  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #48500: Remove superfluous class loader cache entries
	* Fixed bug #48501: Audio captcha rendering and wordslist selection should apply language fallback rules

2013-05-07  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #46265: Problem with freecap 2.0.0 and postgreSQL (Thanks to Tilo Baller)

2013-04-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #46648: Filenames for *.wav causes potential problems

2013-04-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #47406: Cleanup in ext_autoload.php
	* Fixed bug #47407: Keep domain object font ISO-8859-2-encoded
	* Fixed bug #47408: Incorrect object manager creation

2013-02-14  Stanislas Rolland  <typo3@sjbr.ca>

	* Remove "site tag" feature
	* Updated version to 2.0.0

2013-02-13  Stanislas Rolland  <typo3@sjbr.ca>

	* Add option to configure the encryption algorithm in Extension Manager
	* Disable the audio feature on iOS devices
	* Use object manager to create object instances
	* Follow-up to use object manager to create object instances

2013-02-12  Stanislas Rolland  <typo3@sjbr.ca>

	* Cleanup audio file rendering
	* Fix audio player in IE7, IE9 and Opera
	* Fix audio player in IE8 (but may still be blocked depending on security settings)

2013-02-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Update the manual