@@ -1,3 +1,7 @@
+2013-07-10  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Follow-up to bug #47810: Audio Captcha not working under IE 8
+
 2013-07-04  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #47810: Audio Captcha not working under IE 8
